--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "mongo": "^0.1.0",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
